--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<title>Fall Out Boy - Новости</title>
+<meta http-equiv="Content-Language" content="ru" content="en"/>
+<title>Fall Out Boy - ГЌГ®ГўГ®Г±ГІГЁ</title>
 <link rel="stylesheet" type"css" href="css.css">
 </head>
 <body link="#f6ff00">
@@ -13,22 +14,22 @@
 
 <table border="0" height="100" width="780">
 <tr height="100"><td width="780">
-<img src="картинки/head.png" width="780" height="100">
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/head.png" width="780" height="100">
 </td></tr>
 </table>
 
 <table bgcolor="#070527" bordercolor="#f6ff00" border="1" height="50" width="780">
 <tr height="50">
 <td width="154"><a href="index.html">
-<img src="картинки/Новости2.png" width="148" height="48"></a></td>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/ГЌГ®ГўГ®Г±ГІГЁ2.png" width="148" height="48"></a></td>
 <td width="154"><a href="index2.html">
-<img src="картинки/История.png" width="148" height="48"></a></td>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/Г€Г±ГІГ®Г°ГЁГї.png" width="148" height="48"></a></td>
 <td width="154"><a href="index3.html">
-<img src="картинки/Музыка.png" width="148" height="48"></a></td>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/ГЊГіГ§Г»ГЄГ .png" width="148" height="48"></a></td>
 <td width="154"><a href="index4.html">
-<img src="картинки/Клипы.png" width="148" height="48"></a></td>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/ГЉГ«ГЁГЇГ».png" width="148" height="48"></a></td>
 <td width="154"><a href="index5.html">
-<img src="картинки/Карта сайта.png" width="148" height="48"></a></td>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/ГЉГ Г°ГІГ  Г±Г Г©ГІГ .png" width="148" height="48"></a></td>
 </tr>
 </table>
 
@@ -38,123 +39,123 @@
 <table height="200" width="90">
 <tr><td><font>
 <a href="index6.html">
-<img src="картинки/Patrick Martin Stump копия.jpg" width="90" height="60">
-<br>Патрик Мартин Стамп</a></font></td></tr>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/Patrick Martin Stump ГЄГ®ГЇГЁГї.jpg" width="90" height="60">
+<br>ГЏГ ГІГ°ГЁГЄ ГЊГ Г°ГІГЁГ­ Г‘ГІГ Г¬ГЇ</a></font></td></tr>
 <tr><td><font>
 <a href="index7.html">
-<img src="картинки/Peter Lewis Kingston Wentz III копия.jpg" width="90" height="60">
-<br>Пит Вентц</a></font></td></tr>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/Peter Lewis Kingston Wentz III ГЄГ®ГЇГЁГї.jpg" width="90" height="60">
+<br>ГЏГЁГІ Г‚ГҐГ­ГІГ¶</a></font></td></tr>
 <tr><td><font>
 <a href="index8.html">
-<img src="картинки/Joseph Mark Trohman копия.jpg" width="90" height="60">
-<br>Джозеф Марк Троман</a></font></td></tr>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/Joseph Mark Trohman ГЄГ®ГЇГЁГї.jpg" width="90" height="60">
+<br>Г„Г¦Г®Г§ГҐГґ ГЊГ Г°ГЄ Г’Г°Г®Г¬Г Г­</a></font></td></tr>
 <tr><td><font>
 <a href="index9.html">
-<img src="картинки/Andrew John Hurley копия.jpg" width="90" height="60">
-<br>Эндрю Джон Хёрли</a></font></td></tr>
+<img src="ГЄГ Г°ГІГЁГ­ГЄГЁ/Andrew John Hurley ГЄГ®ГЇГЁГї.jpg" width="90" height="60">
+<br>ГќГ­Г¤Г°Гѕ Г„Г¦Г®Г­ Г•ВёГ°Г«ГЁ</a></font></td></tr>
 <tr height="130"><td width="90"></td></tr>
 </table>
 
  </td>
  <td width="690" bgcolor="070527">
 
-<font><h1><div align="center">Ближайший тур</div></h1></font>
+<font><h1><div align="center">ГЃГ«ГЁГ¦Г Г©ГёГЁГ© ГІГіГ°</div></h1></font>
 <table border="1" width="660">
 <tr height="30">
-<td width="100"><font>январь</font></td>
+<td width="100"><font>ГїГ­ГўГ Г°Гј</font></td>
 <td width="100"><font>8</font></td>
-<td width="200"><font>Берлин</font></td>
-<td width="200"><font>Германия</font></td></tr>
+<td width="200"><font>ГЃГҐГ°Г«ГЁГ­</font></td>
+<td width="200"><font>ГѓГҐГ°Г¬Г Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>январь</font></td>
+<td width="100"><font>ГїГ­ГўГ Г°Гј</font></td>
 <td width="100"><font>10</font></td>
-<td width="200"><font>Стокгольм</font></td>
-<td width="240"><font>Швеция</font></td></tr>
+<td width="200"><font>Г‘ГІГ®ГЄГЈГ®Г«ГјГ¬</font></td>
+<td width="240"><font>ГГўГҐГ¶ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>январь</font></td>
+<td width="100"><font>ГїГ­ГўГ Г°Гј</font></td>
 <td width="100"><font>11</font></td>
-<td width="200"><font>Лондон</font></td>
-<td width="200"><font>Великобритания</font></td></tr>
+<td width="200"><font>Г‹Г®Г­Г¤Г®Г­</font></td>
+<td width="200"><font>Г‚ГҐГ«ГЁГЄГ®ГЎГ°ГЁГІГ Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>февраль</font></td>
+<td width="100"><font>ГґГҐГўГ°Г Г«Гј</font></td>
 <td width="100"><font>28</font></td>
-<td width="200"><font>Брисбен</font></td>
-<td width="200"><font>Австралия</font></td></tr>
+<td width="200"><font>ГЃГ°ГЁГ±ГЎГҐГ­</font></td>
+<td width="200"><font>ГЂГўГ±ГІГ°Г Г«ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>2</font></td>
-<td width="200"><font>Сидней</font></td>
-<td width="200"><font>Австралия</font></td></tr>
+<td width="200"><font>Г‘ГЁГ¤Г­ГҐГ©</font></td>
+<td width="200"><font>ГЂГўГ±ГІГ°Г Г«ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>3</font></td>
-<td width="200"><font>Мельбурн</font></td>
-<td width="200"><font>Австралия</font></td></tr>
+<td width="200"><font>ГЊГҐГ«ГјГЎГіГ°Г­</font></td>
+<td width="200"><font>ГЂГўГ±ГІГ°Г Г«ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>5</font></td>
-<td width="200"><font>Перт</font></td>
-<td width="200"><font>Австралия</font></td></tr>
+<td width="200"><font>ГЏГҐГ°ГІ</font></td>
+<td width="200"><font>ГЂГўГ±ГІГ°Г Г«ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>7</font></td>
-<td width="200"><font>Окленд</font></td>
-<td width="200"><font>Новая Зеландия</font></td></tr>
+<td width="200"><font>ГЋГЄГ«ГҐГ­Г¤</font></td>
+<td width="200"><font>ГЌГ®ГўГ Гї Г‡ГҐГ«Г Г­Г¤ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>27</font></td>
-<td width="200"><font>Бирмингем</font></td>
-<td width="200"><font>Великобритания</font></td></tr>
+<td width="200"><font>ГЃГЁГ°Г¬ГЁГ­ГЈГҐГ¬</font></td>
+<td width="200"><font>Г‚ГҐГ«ГЁГЄГ®ГЎГ°ГЁГІГ Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>28</font></td>
-<td width="200"><font>Кардифф</font></td>
-<td width="200"><font>Великобритания</font></td></tr>
+<td width="200"><font>ГЉГ Г°Г¤ГЁГґГґ</font></td>
+<td width="200"><font>Г‚ГҐГ«ГЁГЄГ®ГЎГ°ГЁГІГ Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>29</font></td>
-<td width="200"><font>Манчестер</font></td>
-<td width="200"><font>Великобритания</font></td></tr>
+<td width="200"><font>ГЊГ Г­Г·ГҐГ±ГІГҐГ°</font></td>
+<td width="200"><font>Г‚ГҐГ«ГЁГЄГ®ГЎГ°ГЁГІГ Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>март</font></td>
+<td width="100"><font>Г¬Г Г°ГІ</font></td>
 <td width="100"><font>31</font></td>
-<td width="200"><font>Лондон</font></td>
-<td width="200"><font>Великобритания</font></td></tr>
+<td width="200"><font>Г‹Г®Г­Г¤Г®Г­</font></td>
+<td width="200"><font>Г‚ГҐГ«ГЁГЄГ®ГЎГ°ГЁГІГ Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>3</font></td>
-<td width="200"><font>Париж</font></td>
-<td width="200"><font>Франциия</font></td></tr>
+<td width="200"><font>ГЏГ Г°ГЁГ¦</font></td>
+<td width="200"><font>Г”Г°Г Г­Г¶ГЁГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>4</font></td>
-<td width="200"><font>Амстердам</font></td>
-<td width="200"><font>Нидерланды</font></td></tr>
+<td width="200"><font>ГЂГ¬Г±ГІГҐГ°Г¤Г Г¬</font></td>
+<td width="200"><font>ГЌГЁГ¤ГҐГ°Г«Г Г­Г¤Г»</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>6</font></td>
-<td width="200"><font>Берлин</font></td>
-<td width="200"><font>Германия</font></td></tr>
+<td width="200"><font>ГЃГҐГ°Г«ГЁГ­</font></td>
+<td width="200"><font>ГѓГҐГ°Г¬Г Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>7</font></td>
-<td width="200"><font>Гамбург</font></td>
-<td width="200"><font>Германия</font></td></tr>
+<td width="200"><font>ГѓГ Г¬ГЎГіГ°ГЈ</font></td>
+<td width="200"><font>ГѓГҐГ°Г¬Г Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>8</font></td>
-<td width="200"><font>Мюнхен</font></td>
-<td width="200"><font>Германия</font></td></tr>
+<td width="200"><font>ГЊГѕГ­ГµГҐГ­</font></td>
+<td width="200"><font>ГѓГҐГ°Г¬Г Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>10</font></td>
-<td width="240"><font>Дюссельдорф</font></td>
-<td width="240"><font>Германия</font></td></tr>
+<td width="240"><font>Г„ГѕГ±Г±ГҐГ«ГјГ¤Г®Г°Гґ</font></td>
+<td width="240"><font>ГѓГҐГ°Г¬Г Г­ГЁГї</font></td></tr>
 <tr height="30">
-<td width="100"><font>апрель</font></td>
+<td width="100"><font>Г ГЇГ°ГҐГ«Гј</font></td>
 <td width="100"><font>12</font></td>
-<td width="200"><font>Брюссель</font></td>
-<td width="200"><font>Бельгия</font></td></tr>
+<td width="200"><font>ГЃГ°ГѕГ±Г±ГҐГ«Гј</font></td>
+<td width="200"><font>ГЃГҐГ«ГјГЈГЁГї</font></td></tr>
 </table>
 
  </td>
@@ -166,7 +167,7 @@
 
 	<tr height="50"><td>
 	<font><div align="center">
-Студенческий сайт: автор - Семеко И. А.  <a href="index10.html">Обратная связь</a>
+Г‘ГІГіГ¤ГҐГ­Г·ГҐГ±ГЄГЁГ© Г±Г Г©ГІ: Г ГўГІГ®Г° - Г‘ГҐГ¬ГҐГЄГ® Г€. ГЂ.  <a href="index10.html">ГЋГЎГ°Г ГІГ­Г Гї Г±ГўГїГ§Гј</a>
 	</div></font>
 	</td></tr>
 
