--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Language" content="ru" content="en"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" content="ru"/>
 <title>Fall Out Boy - Íîâîñòè</title>
 <link rel="stylesheet" type"css" href="css.css">
 </head>
