--- a/index2.html
+++ b/index2.html
@@ -195,7 +195,7 @@
 
 	<tr height="50"><td>
 	<font><div align="center">
-Студенческий сайт: автор - Семеко И. А.  <a href="index10.html">Обратная связь</a>
+Студенческий сайт: автор - Семеко И. А.  <a href="code/index.php">Обратная связь</a>
 	</div></font>
 	</td></tr>
 	</table>
