--- a/index4.html
+++ b/index4.html
@@ -88,7 +88,7 @@ src="видео/Fall Out Boy - Champion.mp4" poster="картинки/ф2.jpg" c
 
 	<tr height="50"><td>
 	<font><div align="center">
-Студенческий сайт: автор - Семеко И. А.  <a href="code/index.php">Обратная связь</a>
+Студенческий сайт: автор - Семеко И. А.  <a href="index10.html">Обратная связь</a>
 	</div></font>
 	</td></tr>
 	</table>
