--- a/index10.html
+++ b/index10.html
@@ -62,7 +62,7 @@
 <table>
 <tr><td width=300><font>
 
-<form class="contact_form" action="contact-form.php" method="post">
+<form class="contact_form" action="index11.php" method="post">
  <p>
             <label for="name">Имя:</label>
             <input type="text"  name="name" placeholder="Введите ваше имя" required />
