--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	<font><div align="center">
 	свяжитесь с нами
 	<a href="https://e.mail.ru/messages/inbox?back=1&from=mail.login&back=1"><img src="image/yandex.png" width="90" height="80"></a>
-	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60"></a>
+	<a href="https://e.mail.ru/messages/inbox/?back=1"><img src="image/vk.png" width="148" height="60"></a>
 	</div></font>
 	</td></tr>
 
