--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<tr height="50"><td>
 	<font><div align="center">
 	свяжитесь с нами
-	<a href="https://e.mail.ru/compose/?1517848668926"><img src="image/yandex.png" width="90" height="80"></a>
+	<a href="FlOtBy@mail.ru"><img src="image/yandex.png" width="90" height="80"></a>
 	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60"></a>
 	</div></font>
 	</td></tr>
