--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 	<tr height="50"><td>
 	<font><div align="center">
 	свяжитесь с нами
-	<a href="mailto:FlOtBy@mail.ru"><img src="image/yandex.png" width="90" height="80"></a>
+	<a href="https://mail.yandex.ua/?msid=1517852712.76544.20940.28684&m_pssp=embedded&uid=314097067&login=ivan-semeko#compose">
+	<img src="image/yandex.png" width="90" height="80"></a>
 	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60"></a>
 	</div></font>
 	</td></tr>
