--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
  </td>
  <td width="690" bgcolor="070527">
 
- <font><h1><div align="center">Карта сайта</div></h1></font>
+ <font><h1><div align="center">История</div></h1></font>
 
 <table border="0">
 <tr><td><font>
