--- a/index7.html
+++ b/index7.html
@@ -65,24 +65,24 @@
 
 <font><h1><div align="center">Пит Вентц</div></h1>
 
-<p>Пит Вентц родился и вырос в Уилметте, пригороде Чикаго. В школе он был отличным 
+<p align="justify">Пит Вентц родился и вырос в Уилметте, пригороде Чикаго. В школе он был отличным 
 футбольным игроком и состоял в школьной футбольной команде. Затем Пит поступил в 
 университет, где изучал политологию, но проучившись один семестр, бросил его и 
 всерьез занялся музыкой. Он активно участвовал в хардкор-панковской жизни Чикаго 
 и до Fall Out Boy играл в нескольких группах.</p>
 
-<p>В феврале 2005 года Пит пытался совершить самоубийство, приняв большую дозу 
+<p align="justify">В феврале 2005 года Пит пытался совершить самоубийство, приняв большую дозу 
 антидепрессантов. Пит пролежал в больнице неделю. Вот что он сказал по этому поводу: 
 «Мне хотелось спрятаться от окружающих все сильнее и сильнее. Чем дальше, тем хуже 
 мне было. Я перестал спать. Мне хотелось уничтожить своё сознание, перестать думать». 
 Пит говорит, что ему симпатичны музыканты-самоубийцы — Эллиотт Смит и Ян Кертис из 
 Joy Division.</p>
 
-<p>У Пита есть шрам на подбородке, по слухам он получил его, когда пытался сделать 
+<p align="justify">У Пита есть шрам на подбородке, по слухам он получил его, когда пытался сделать 
 какой-то трюк на сцене. А также шрам в брови — постарался Джо Троман, когда в шутку 
 напал на него с его же бас-гитарой.</p>
 
-<p>В марте 2006 года в Интернете появились фото обнаженного Пита. Разместивший их сайт 
+<p align="justify">В марте 2006 года в Интернете появились фото обнаженного Пита. Разместивший их сайт 
 объявил, что получил фото через третьи руки. Пит первоначально послал эти фотографии 
 девушке, которая была ему симпатична и к которой у него был интерес. Ну а девушка, 
 недолго думая, сдала фотографии папарацци, получив неплохие деньги. После этого Пит 
