--- a/index8.html
+++ b/index8.html
@@ -64,19 +64,19 @@
  <td width="600" bgcolor="070527">
  <font><div align="center"><h1>Джозеф Марк Троман</h1></div>
 
-<p>Джозеф Марк Троман — американский музыкант, соло-гитарист 
+<p align="justify">Джозеф Марк Троман — американский музыкант, соло-гитарист 
 группы Fall Out Boy, The Damned Things и With Knives.</p>
 
-<p>Джо Троман родился 1 сентября 1984 года в Голливуде, в еврейской 
+<p align="justify">Джо Троман родился 1 сентября 1984 года в Голливуде, в еврейской 
 американской семье и ходил в еврейскую воскресную школу. Рос в Саут-Рассел, что недалеко 
 от Кливленда, штат Огайо, пока не перебрался в Чикаго в 12 лет. Он посетил следующие 
 школы Вашберн Джуниор-Хай и Нью-Трайер Туаншип Хай-скул. Его считают 
 основателем Fall Out Boy вместе с Питом. Согласно различным биографиям, он друг детства 
 Пита Венца.</p>
 
-<p>29 октября 2011 года, Джо женился на своей давней подруге Мари.</p>
+<p align="justify">29 октября 2011 года, Джо женился на своей давней подруге Мари.</p>
 
-<p>В средней школе, Троман стал участвовать в хардкорных группах Чикаго. В возрасте 
+<p align="justify">В средней школе, Троман стал участвовать в хардкорных группах Чикаго. В возрасте 
 шестнадцати лет, он присоединился к местной группе Arma Angelus и провел летние гастроли 
 в качестве басиста группы. Он подружился с вокалистом группы, Питом Венцом, и оба 
 обсуждали формирование более мелодичной группы, ориентироваясь на такую группу, как 
