--- a/index9.html
+++ b/index9.html
@@ -65,25 +65,25 @@
 
 <font><h1><div align="center">Эндрю Джон Хёрли</div></h1>
 
-<p>Эндрю Джон Хёрли барабанщик группы Fall Out Boy родился  31 мая 1980 в Меномони Фоллс, 
+<p align="justify">Эндрю Джон Хёрли барабанщик группы Fall Out Boy родился  31 мая 1980 в Меномони Фоллс, 
 Висконсин, США.</p>
 
-<p>Когда Энди было пять лет, его отец умер. Воспитанием будущего ударника Fall Out Boy 
+<p align="justify">Когда Энди было пять лет, его отец умер. Воспитанием будущего ударника Fall Out Boy 
 занималась только мать, медсестра. Энди учился в University of Wisconsin-Milwaukee в 
 Висконсине и планировал получить два высших образования - в антропологии и истории. Но 
 в 2003 году он присоединился к начинающей путь к славе группе Fall Out Boy и бесконечные 
 концерты и работа в студии положила конец планам в науке.</p>
 
-<p>В детстве Энди был проблемным ребенком – бухал, не слушался мать и учителей. Теперь же 
+<p align="justify">В детстве Энди был проблемным ребенком – бухал, не слушался мать и учителей. Теперь же 
 он ведет правильной образ жизни – он вегетарианец, любит юмористические книги и видеоигры, 
 стучит на барабанах C&C Custom (тарелки Sabian).</p>
 
-<p>Ранее Энди играл в чикагских металкор группах Racetraitor, Milwaukee’s Global Scam и Kill 
+<p align="justify">Ранее Энди играл в чикагских металкор группах Racetraitor, Milwaukee’s Global Scam и Kill 
 the Monkey Friends. Позже Энди переключился на эмо-кор и играл в группе Project Rocket. 
 Перемена стилей на это не закончилось и он ушел в панк, став играть в группе The Kill Pill. 
 Так же он играл в группах с Питом Уенцем, одной из которых была Culture of Violence.</p>
 
-<p>Интересные факты об Энди Хёрли: <br>1. Он вегетарианец и изучает много вопросов, связанных 
+<p align="justify">Интересные факты об Энди Хёрли: <br>1. Он вегетарианец и изучает много вопросов, связанных 
 с защитой животных. <br>2. Он входит общество «Всемирно сексуальных вегетарианцев» PETA2. <br>3. 
 У него есть множество татуировок - сердце с MOM на груди, большое полотно на спине и 
 цветные росписи на руках. <br>4. В одном из интервью Энди сказал, что на нем 5. 600 татуировок.
