--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
 	</tr>
 
 	<tr height="50"><td>
-	<font><div align="center">
-	<h1>студенческий сайт. автор Семеко И.А.</h1></div>
-	<div valign=left><a href="https://mail.yandex.ua/?msid=1517852712.76544.20940.28684&m_pssp=embedded&uid=314097067&login=ivan-semeko#compose">
-	<img src="image/yandex.png" width="90" height="60"></a></div>
-	<div valign=left><a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60"></a></div>
+	<font>
+	<a href="https://mail.yandex.ua/?msid=1517852712.76544.20940.28684&m_pssp=embedded&uid=314097067&login=ivan-semeko#compose">
+	<img src="image/yandex.png" width="90" height="60" align="right"></a>
+	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60" align="right"></a>
+	<div align="left">
+	<h1>студенческий сайт<br> автор Семеко И.А.  обратная связь:</h1></div>
 	</font>
 	</td></tr>
 
