--- a/index2.html
+++ b/index2.html
@@ -198,12 +198,13 @@
 	</tr>
 
 	<tr height="50"><td>
-	<font><div align="center">
-	<h1>свяжитесь с нами</h1>
+	<font>
 	<a href="https://mail.yandex.ua/?msid=1517852712.76544.20940.28684&m_pssp=embedded&uid=314097067&login=ivan-semeko#compose">
-	<img src="image/yandex.png" width="90" height="60"></a>
-	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60"></a>
-	</div></font>
+	<img src="image/yandex.png" width="90" height="60" align="right"></a>
+	<a href="https://vk.com/id146355016"><img src="image/vk.png" width="148" height="60" align="right"></a>
+	<div align="left">
+	<h1>студенческий сайт<br> автор Семеко И.А.  обратная связь:</h1></div>
+	</font>
 	</td></tr>
 	</table>
 	</div>
